--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "require": {
         "php": "^8.1",
         "filament/filament": "^3.0",
-        "illuminate/support": "^10.0"
+        "illuminate/support": "^10.0",
+        "spatie/laravel-package-tools": "^1.16"
     },
     "require-dev": {
         "orchestra/testbench": "^8.0",
