feat: Add modern development tools and project files
This commit enhances the development environment and project structure by introducing modern tooling and standard project files.

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ composer.lock
 
 # PHPUnit files
 .phpunit.result.cache
+phpunit.xml
 
 # Configuration files for your editor/IDE (PhpStorm, Visual Studio Code, etc.)
 .idea/
